--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set default Xamarin SDK versions
       run: |
-        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
+        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --mac=8.2.0.17
     
     - name: Set default Xcode 13.1
       run: |
