--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,12 +13,6 @@ jobs:
       run: |
         $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --mac=8.2
     
-#    - name: Set default Xcode 13.1
-#      run: |
-#        XCODE_ROOT=/Applications/Xcode_13.1.0.app
-#        echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
-#        sudo xcode-select -s $XCODE_ROOT
-
     - name: Setup .NET SDK 6.0.x
       uses: actions/setup-dotnet@v1
       with:
@@ -29,3 +23,9 @@ jobs:
 
     - name: Build
       run: msbuild src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj /p:Configuration=Release /t:Rebuild
+
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v2
+      with:
+        name: packages
+        path: "src/SoundCharts.Explorer.MacOS/bin/Release/SoundCharts Explorer-1.0.pkg"
