--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -1,8 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.CommandLine" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.UserSecrets" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Console" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Debug" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.EventLog" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.EventSource" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="SixLabors.ImageSharp" version="1.0.4" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Diagnostics.EventLog" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Memory" version="4.5.4" targetFramework="xamarinmac20" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinmac20" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="xamarinmac20" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Text.Json" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="xamarinmac20" />
 </packages>
