--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
         dotnet restore src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj
 
     - name: Build
+      run: |
         dotnet build src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj --configuration Release
 
   mac-build:
