Sketch MBTiles conversion command.

--- a/src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj
+++ b/src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.11" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+    <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.0.7" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
+  </ItemGroup>
+
 </Project>
