--- a/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
+++ b/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Utilities\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
   </ItemGroup>
 </Project>
