--- a/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
+++ b/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
@@ -94,6 +94,9 @@
     <Reference Include="System.Text.Json">
       <HintPath>..\packages\System.Text.Json.6.0.0\lib\netstandard2.0\System.Text.Json.dll</HintPath>
     </Reference>
+    <Reference Include="LiteDB">
+      <HintPath>..\packages\LiteDB.5.0.11\lib\netstandard2.0\LiteDB.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
