--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiteDB" version="5.0.11" targetFramework="xamarinmac20" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
