Sketch addition of logging.

--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -2,8 +2,17 @@
 <packages>
   <package id="LiteDB" version="5.0.11" targetFramework="xamarinmac20" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Logging.Console" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="SixLabors.ImageSharp" version="1.0.4" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
