--- a/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
+++ b/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
@@ -18,6 +18,7 @@
     <None Remove="Tiles\Caches\" />
     <None Remove="Utilities\" />
     <None Remove="SixLabors.ImageSharp" />
+    <None Remove="Microsoft.Extensions.Logging" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tiles\" />
@@ -28,5 +29,6 @@
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
   </ItemGroup>
 </Project>
