--- a/src/tye.yaml
+++ b/src/tye.yaml
@@ -2,10 +2,12 @@ name: sound-charts
 
 extensions:
 - name: dapr
+  services:
+    tileset-service:
+      components-path: ./SoundCharts.Explorer.TilesetService/Components/Local
 
 services:
 - name: tileset-service
   project: ./SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
   env_file:
   - ../secrets.env
-
