--- a/src/SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
+++ b/src/SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
     <PackageReference Include="Dapr.Client" Version="1.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Linq.Async" Version="5.1.0" />
   </ItemGroup>
 
 </Project>
