--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,25 @@ jobs:
       run: |
         dotnet build src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj --configuration Release
 
+  services-build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build tileset-service
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        file: src/SoundCharts.Explorer.TilesetService/Dockerfile
+        push: false
+        tags: sound-charts/tileset-service:latest
+
   mac-build:
 
     runs-on: macos-11
