--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,20 +28,38 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+        REGISTRY: soundcharts.azurecr.io
+
     steps:
+    - name: Generate build ID
+      id: prep
+      run: |
+          branch=${GITHUB_REF##*/}
+          sha=${GITHUB_SHA::8}
+          ts=$(date +%s)
+          echo "::set-output name=BUILD_ID::${branch}-${sha}-${ts}"          
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Login to ACR
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ REGISTRY }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+
     - name: Build tileset-service
       id: docker_build
       uses: docker/build-push-action@v2
       with:
         file: src/SoundCharts.Explorer.TilesetService/Dockerfile
-        push: false
-        tags: sound-charts/tileset-service:latest
+        push: true
+        tags: ${{ REGISTRY }}/tileset-service:${{ steps.prep.outputs.BUILD_ID }}
 
   mac-build:
 
