--- a/src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj
+++ b/src/SoundCharts.Explorer.Cli/SoundCharts.Explorer.Cli.csproj
@@ -8,6 +8,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
