--- a/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
+++ b/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
@@ -150,6 +150,7 @@
     <Folder Include="Views\" />
     <Folder Include="Services\Tilesets\" />
     <Folder Include="Services\Logging\" />
+    <Folder Include="Views\SourceList\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -171,22 +172,24 @@
     <Compile Include="IsExternalInit.cs" />
     <Compile Include="Components\IApplicationComponent.cs" />
     <Compile Include="Components\ApplicationStateMonitor.cs" />
-    <Compile Include="Views\SourceListView.cs" />
-    <Compile Include="Views\SourceListDelegate.cs" />
-    <Compile Include="Views\SourceListDataSource.cs" />
     <Compile Include="Services\Tilesets\ITilesetManager.cs" />
     <Compile Include="Services\Tilesets\TilesetManager.cs" />
     <Compile Include="Components\TilesetMonitor.cs" />
-    <Compile Include="Views\SourceListItem.cs" />
-    <Compile Include="Views\SourceListView.designer.cs">
-      <DependentUpon>Views\SourceListView.cs</DependentUpon>
-    </Compile>
     <Compile Include="SourceListViewController.cs" />
     <Compile Include="SourceListViewController.designer.cs">
       <DependentUpon>SourceListViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="Services\Logging\OSLoggerProvider.cs" />
     <Compile Include="Services\Logging\OSLogger.cs" />
+    <Compile Include="Views\SourceList\SourceListDataSource.cs" />
+    <Compile Include="Views\SourceList\SourceListDelegate.cs" />
+    <Compile Include="Views\SourceList\SourceListItem.cs" />
+    <Compile Include="Views\SourceList\SourceListView.cs" />
+    <Compile Include="Views\SourceList\SourceListView.designer.cs">
+      <DependentUpon>..\Views\SourceListView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SourceList\HeaderItem.cs" />
+    <Compile Include="Views\SourceList\TilesetItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
