Automate building native logging library.

--- a/src/SoundCharts.Explorer.ManagedLogging/SoundCharts.Explorer.ManagedLogging.csproj
+++ b/src/SoundCharts.Explorer.ManagedLogging/SoundCharts.Explorer.ManagedLogging.csproj
@@ -13,4 +13,9 @@
     </None>
   </ItemGroup>
 
+  <Target Name="BuildNativeLogging" BeforeTargets="Build">
+    <Exec Command="xcodebuild"
+          WorkingDirectory="..\SoundCharts.Explorer.NativeLogging" />
+  </Target>
+
 </Project>
