Sketch switching between online/offline.

--- a/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
+++ b/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
@@ -21,6 +21,7 @@
     <None Remove="Microsoft.Extensions.Logging" />
     <None Remove="Tiles\Tilesets\" />
     <None Remove="System.Text.Json" />
+    <None Remove="System.Collections.Immutable" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tiles\" />
@@ -34,5 +35,6 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
+    <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
   </ItemGroup>
 </Project>
