--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="SixLabors.ImageSharp" version="1.0.4" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Diagnostics.EventLog" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Memory" version="4.5.4" targetFramework="xamarinmac20" />
