Add service and ingress.

--- a/src/tye.yaml
+++ b/src/tye.yaml
@@ -6,6 +6,18 @@ extensions:
     tileset-service:
       components-path: ./SoundCharts.Explorer.TilesetService/Components/Local
 
+ingress:
+ - name: ingress
+   bindings:
+   - port: 8080
+   rules:
+   - path: /tiles
+     service: tiles-service
+   - path: /tilesets
+     service: tileset-service
+
 services:
+- name: tiles-service
+  project: ./SoundCharts.Explorer.TilesService/SoundCharts.Explorer.TilesService.csproj
 - name: tileset-service
   project: ./SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
