Sketch tileset caching.

--- a/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
+++ b/src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
@@ -22,6 +22,7 @@
     <None Remove="Tiles\Tilesets\" />
     <None Remove="System.Text.Json" />
     <None Remove="System.Collections.Immutable" />
+    <None Remove="System.Reactive" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tiles\" />
@@ -36,5 +37,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 </Project>
