--- a/src/SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
+++ b/src/SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Storage.Common" Version="12.9.0" />
     <PackageReference Include="Dapr.Client" Version="1.5.0" />
     <PackageReference Include="Dapr.Extensions.Configuration" Version="1.5.0" />
+    <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Linq.Async" Version="5.1.0" />
   </ItemGroup>
