Rename tile service.

--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -15,7 +15,7 @@ server {
 
     location ~ ^/tiles {
         rewrite ^/tiles/(.*)$ /tiles/$1 break;
-        proxy_pass http://tiles-service;
+        proxy_pass http://tile-service;
         proxy_http_version 1.1;
         proxy_redirect off;
         proxy_set_header Host $host;
