--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,6 +61,14 @@ jobs:
         push: true
         tags: ${{ env.REGISTRY }}/tileset-service:${{ steps.prep.outputs.BUILD_ID }}
 
+    - name: Build tile-service
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        file: src/SoundCharts.Explorer.TileService/Dockerfile
+        push: true
+        tags: ${{ env.REGISTRY }}/tile-service:${{ steps.prep.outputs.BUILD_ID }}
+
   mac-build:
 
     runs-on: macos-11
