--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,7 +69,7 @@ jobs:
       with:
         file: src/SoundCharts.Explorer.TilesetService/Dockerfile
         push: true
-        tags: ${{ env.REGISTRY }}/tileset-service:${{ steps.prep.outputs.BUILD_ID }}
+        tags: ${{ steps.tags.outputs.tile-service-tag }}
 
     - name: Build tile-service
       id: docker_build_tile
@@ -77,7 +77,7 @@ jobs:
       with:
         file: src/SoundCharts.Explorer.TileService/Dockerfile
         push: true
-        tags: ${{ env.REGISTRY }}/tile-service:${{ steps.prep.outputs.BUILD_ID }}
+        tags: ${{ steps.tags.outputs.tileset-service-tag }}
 
   services-deploy:
 
