Sketch use of YARP as ingress/reverse-proxy.

--- a/src/SoundCharts.Explorer.Ingress/Dockerfile
+++ b/src/SoundCharts.Explorer.Ingress/Dockerfile
@@ -11,16 +11,16 @@ USER appuser
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
 WORKDIR /src
-COPY ["src/SoundCharts.Explorer.TileService/SoundCharts.Explorer.TileService.csproj", "src/SoundCharts.Explorer.TileService/"]
-RUN dotnet restore "src/SoundCharts.Explorer.TileService/SoundCharts.Explorer.TileService.csproj"
+COPY ["src/SoundCharts.Explorer.Ingress/SoundCharts.Explorer.Ingress.csproj", "src/SoundCharts.Explorer.Ingress/"]
+RUN dotnet restore "src/SoundCharts.Explorer.Ingress/SoundCharts.Explorer.Ingress.csproj"
 COPY . .
-WORKDIR "/src/src/SoundCharts.Explorer.TileService"
-RUN dotnet build "SoundCharts.Explorer.TileService.csproj" -c Release -o /app/build
+WORKDIR "/src/src/SoundCharts.Explorer.Ingress"
+RUN dotnet build "SoundCharts.Explorer.Ingress.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SoundCharts.Explorer.TileService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SoundCharts.Explorer.Ingress.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "SoundCharts.Explorer.TileService.dll"]
+ENTRYPOINT ["dotnet", "SoundCharts.Explorer.Ingress.dll"]
