--- a/src/tye.yaml
+++ b/src/tye.yaml
@@ -13,6 +13,10 @@ services:
   project: ./SoundCharts.Explorer.TileService/SoundCharts.Explorer.TileService.csproj
 - name: tileset-service
   project: ./SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
+- name: yarp
+  project: ./SoundCharts.Explorer.Ingress/SoundCharts.Explorer.Ingress.csproj
+  bindings:
+   - port: 8081
 - name: nginx
   image: nginx:latest
   bindings:
