--- a/src/SoundCharts.Explorer.Ingress/appsettings.json
+++ b/src/SoundCharts.Explorer.Ingress/appsettings.json
@@ -27,14 +27,20 @@
       "tile-service-route": {
         "ClusterId": "tile-service-cluster",
         "Match": {
-          "Path": "/tiles/{**catch-all}"
-        }
+          "Path": "/api/tiles/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/api" }
+        ]
       },
       "tileset-service-route": {
         "ClusterId": "tileset-service-cluster",
         "Match": {
-          "Path": "/tilesets/{**catch-all}"
-        }
+          "Path": "/api/tilesets/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/api" }
+        ]
       }
     }
   }
