Remove Dapr (for now) in favor of env. variables.

--- a/src/tye.yaml
+++ b/src/tye.yaml
@@ -2,17 +2,13 @@ name: sound-charts
 
 containerEngine: docker
 
-extensions:
-- name: dapr
-  services:
-    tileset-service:
-      components-path: ./SoundCharts.Explorer.TilesetService/Components/Local
-
 services:
 - name: tile-service
   project: ./SoundCharts.Explorer.TileService/SoundCharts.Explorer.TileService.csproj
 - name: tileset-service
   project: ./SoundCharts.Explorer.TilesetService/SoundCharts.Explorer.TilesetService.csproj
+  env_file:
+  - ../secrets.env
 - name: ingress
   project: ./SoundCharts.Explorer.Ingress/SoundCharts.Explorer.Ingress.csproj
   bindings:
